Fix: Hamburger Menu toggle animation reduced to 0.5s -It was too long previously. Had a duration of 1s.

--- a/css/header.css
+++ b/css/header.css
@@ -142,7 +142,7 @@
 
   .rotate {
     transform: rotateX(360deg);
-    transition: all 1s linear;
+    transition: transform 0.5s linear;
   }
 
   .navbar.active {
